i moved background image to App to wrap entire app and set it to fixed

--- a/src/js/App/_App.scss
+++ b/src/js/App/_App.scss
@@ -1,5 +1,15 @@
 @import "../../sass/layout/mixins";
 
+
+.background {
+  background-attachment: fixed;
+  background-position-x: 30%;
+  background-position-y: 30%;
+  @include all-big-screens {
+    background-position-x: 0;
+    background-position-y: 0;
+  }
+}
 .dupa {
   width: 100%;
   height: 30vh;
